# mia-api

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.yaml  roadmap.md  specification.yaml
api/: Cargo.toml
api/src/: lib.rs  openapi.rs
api/src/config/: routes.rs
api/src/endpoints/: app_tokens.rs  configuration.rs  genres.rs  images.rs  languages.rs  logs.rs  logset.rs  masterdata.rs  media.rs  mod.rs  movies.rs  ping.rs  ratings_linearization.rs  refresh.rs  series.rs  sources.rs  statistics.rs  tags.rs  titles.rs  users.rs  watchlist.rs
api/src/infrastructure/: api_err.rs  api_response.rs  app_state.rs  mod.rs
api/src/middleware/: admin.rs  auth.rs  cors.rs  mod.rs  user.rs
client/: Cargo.toml
client/src/: init.rs  lib.rs
client/src/infrastructure/: mod.rs  panic_hook.rs
entities/: Cargo.toml
entities/src/: functions.rs  lib.rs
entities/src/entities/: app_tokens.rs  credits.rs  episodes.rs  genres.rs  image_sizes.rs  images.rs  languages.rs  logs.rs  manual_image_references.rs  media.rs  media_genres.rs  media_locks.rs  media_tags.rs  mod.rs  movie_locks.rs  movies.rs  people.rs  prelude.rs  sea_orm_active_enums.rs  seasons.rs  series.rs  series_locks.rs  series_watchlist.rs  sources.rs  sync_state.rs  tags.rs  titles.rs  user_media.rs  users.rs  watchlist.rs
entities/src/traits/: from_model.rs  linked.rs  locks.rs  mod.rs
infrastructure/: Cargo.toml
infrastructure/src/: config.rs  errors.rs  lib.rs
integrations/: Cargo.toml
integrations/src/: constants.rs  lib.rs
integrations/src/infrastructure/: err.rs  http.rs  mod.rs
integrations/src/tmdb/: configuration.rs  genres.rs  initialize.rs  mod.rs  movies.rs  series.rs
integrations/src/tmdb/services/: configuration.rs  genres.rs  images.rs  initialize.rs  mod.rs  movies.rs  search.rs  series.rs
integrations/src/tmdb/views/: changes.rs  configuration.rs  images.rs  language.rs  mod.rs  movie_details.rs  movie_title.rs  multi_results.rs  production_country.rs  season_details.rs  series_details.rs  series_title.rs
migrations/: Cargo.toml
migrations/src/: lib.rs  m20230920_143231_create_users_table.rs  m20231004_133637_initial.rs  m20231004_133637_v0_1_0.rs  m20231102_160504_sources.rs  m20231112_145410_add_logs_userid.rs  m20231231_113504_fix_multiuser_support.rs  m20240101_171453_seed_users.rs  m20240106_122113_fix_multiuser_support.rs  m20240106_122631_make_fields_optional.rs  m20240116_180713_sources_name_index.rs  m20240118_185345_add_log_sources.rs  m20240121_170225_rename_log_rating.rs  m20240124_142349_fix_watchlist_table.rs  m20240208_125123_app_tokens.rs  m20240208_152207_add_bot_created.rs  m20240217_103742_app_token_generated.rs  m20240410_130251_cleanup.rs  m20240410_140155_seasons_fix.rs  m20251013_121027_locks.rs  m20251017_120428_images.rs  m20260416_000001_sync_state.rs  m20260416_000002_origin_country.rs  m20260417_000001_episodes.rs  m20260417_000002_add_still_image_type.rs  m20260417_000003_season_episode_images.rs  m20260417_000004_drop_series_computed_fields.rs  m20260430_000001_add_logs_original_stars.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/infrastructure/: constants.rs  initialize.rs  integrations_trait_implementations.rs  mod.rs  rule_violation.rs  srv_err.rs  traits.rs  view_trait_implementations.rs
services/src/services/: app_tokens.rs  configuration.rs  genres.rs  images.rs  languages.rs  logs.rs  logset.rs  masterdata.rs  media.rs  metadata.rs  mod.rs  movies.rs  query.rs  ratings_linearization.rs  refresh.rs  series.rs  sources.rs  statistics.rs  tags.rs  titles.rs  users.rs  watchlist.rs
services/src/views/: query.rs
src/: main.rs
transpiler/: Cargo.toml
transpiler/src/: constructor.rs  lexer.rs  lib.rs  parser.rs
views/: Cargo.toml
views/src/: lib.rs
views/src/api/: api_err.rs  mod.rs  route_type.rs
views/src/app_tokens/: app_token.rs  app_token_generate.rs  app_token_index.rs  app_token_revoke.rs  mod.rs
views/src/configuration/: images_configuration.rs  mod.rs
views/src/genres/: genre.rs  genre_create.rs  genre_delete_params.rs  genre_index.rs  mod.rs
views/src/images/: images.rs  images_update.rs  mod.rs
views/src/languages/: language.rs  language_index.rs  mod.rs
views/src/logs/: log.rs  log_create.rs  log_delete.rs  log_delete_params.rs  log_details.rs  log_update.rs  logs.rs  mod.rs
views/src/logset/: logset_create.rs  mod.rs
views/src/media/: media_by_ids_query.rs  media_create_params.rs  media_delete.rs  media_index.rs  media_search.rs  media_source_create.rs  media_source_delete.rs  media_type.rs  mod.rs
views/src/movies/: mod.rs  movie_details.rs  movie_metadata.rs
views/src/ping/: mod.rs  ping_response.rs
views/src/ratings_linearization/: linearize_result.rs  mod.rs  user_summary.rs
views/src/refresh/: mod.rs  refresh_result.rs
views/src/routing/: mod.rs  route_type.rs
views/src/series/: mod.rs  series_details.rs  series_metadata.rs
views/src/sources/: mod.rs  source.rs  source_create.rs  source_delete.rs  source_details.rs  source_index.rs  source_update.rs
views/src/statistics/: stats.rs
views/src/tags/: mod.rs  tag.rs  tag_create.rs  tag_delete_params.rs
views/src/titles/: alternative_title.rs  mod.rs  title_create.rs  title_delete.rs  title_set_primary.rs
views/src/tmdb/: collection.rs  configuration.rs  genre.rs  language.rs  mod.rs  movie_details.rs  production_company.rs  series_details.rs
views/src/users/: current_user.rs  mod.rs  password_change.rs  token_claims.rs  user_delete.rs  user_index.rs  user_login.rs  user_profile.rs  user_registration.rs  user_signup.rs  user_token.rs  user_token_claims.rs
views/src/watchlist/: mod.rs  search.rs  watchlist.rs
