[package]
name = "mia-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["api", "migrations", "entities", "services", "views", "integrations", "transpiler"]

[dependencies]
tokio = "1.32.0"
api = { path = "api" }
dotenv = "0.15.0"
