[package]
name = "mia-api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["api", "migrations", "entities", "services", "views", "integrations", "transpiler", "infrastructure"]

[dependencies]
tokio = "1.47.0"
api = { path = "api" }
tracing-subscriber = "0.3.20"
infrastructure = { path = "infrastructure" }
migrations = { path = "migrations" }
