[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
services = { path = "../services" }
entities = { path = "../entities" }
views = { path = "../views" }
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = "1.0.188"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
jsonwebtoken = "8.3.0"
uuid = "1.4.1"
axum-macros = "0.3.8"