[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
services = { path = "../services" }
entities = { path = "../entities" }
views = { path = "../views" }
axum = "0.7.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = "1.0.188"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
jsonwebtoken = "9.2.0"
uuid = "1.4.1"
axum-macros = "0.4.0"
chrono = "0.4.32"
once_cell = "1.19.0"
utoipa = { version = "4.2.0", features = ["yaml"] }
utoipa-swagger-ui = { version = "7.0.1", features = ["axum"] }