[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
services = { path = "../services" }
views = { path = "../views" }
axum = { version = "0.8.0", features = ["macros"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
sea-orm = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = "1.0.0"
tower = "0.5.0"
tower-http = { version = "0.6.0", features = ["cors"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
chrono = "0.4.0"
once_cell = "1.21.0"
utoipa = { version = "5.4.0", features = ["yaml", "axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }