[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.90"
views = { path = "../views" }

[dependencies.web-sys]
version = "0.3.67"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
console_error_panic_hook = "0.1.7"