[package]
name = "integrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.32.0", features = ["full"] }
views = { path = "../views" }
once_cell = "1.18.0"
log = { version = "0.4.20", features = [] }
tracing = "0.1.37"
serde = "1.0.188"
serde_json = "1.0.107"