[package]
name = "integrations"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = { path = "../infrastructure" }
reqwest = { version = "0.12.0", features = ["json", "blocking", "stream"] }
once_cell = "1.21.0"
tracing = "0.1.0"
serde = "1.0.0"
serde_json = "1.0.0"
bytes = "1.10.1"
futures-core = "0.3.31"
futures-util = "0.3.31"