[package]
name = "migrations"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
uuid = { version = "1.18.0", features = ["v4"] }


[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid"]
