[package]
name = "migrations"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
infrastructure = { path = "../infrastructure" }
uuid = { version = "1.18.0", features = ["v4"] }
log = { version = "0.4.0"}

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid"]
