[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../entities" }
views = { path = "../views" }
integrations = { path = "../integrations" }
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
fancy-regex = "0.13.0"
uuid = "1.4.1"
argon2 = "0.5.2"
chrono = "0.4.31"
jsonwebtoken = "9.2.0"
cruet = "0.14.0"
http = "1.0.0"
log = "0.4.20"
once_cell = "1.19.0"