[package]
name = "services"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../entities" }
views = { path = "../views" }
integrations = { path = "../integrations" }
transpiler = { path = "../transpiler" }
infrastructure = { path = "../infrastructure" }
sea-orm = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
fancy-regex = "0.16.0"
uuid = "1.18.0"
argon2 = "0.5.0"
chrono = "0.4.0"
jsonwebtoken = "10.0.0"
cruet = "0.15.0"
http = "1.3.0"
log = "0.4.0"
once_cell = "1.21.0"
futures = "0.3.0"
image = "0.25.8"
gcd = "2.3.0"
tokio = "1.47.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
tokio-util = { version = "0.7.17", features = ["io"] }
bytes = "1.10.1"