[package]
name = "views"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
serde_json = "1.0.111"
chrono = "0.4.31"
http = "1.0.0"
uuid = { version = "1.6.1", features = ["v4"] }
axum-core = "0.4.2"
sea-orm = "0.12.12"
utoipa = "4.2.0"