[package]
name = "views"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.0"
serde_json = "1.0.0"
chrono = "0.4.0"
http = "1.0.0"
uuid = { version = "1.6.1", features = ["v4"] }
axum-core = "0.5.0"
sea-orm = "1.1.0"
utoipa = "5.4.0"